Fix codemirror hints z-index

--- a/src/internal-packages/query/styles/auto-complete.less
+++ b/src/internal-packages/query/styles/auto-complete.less
@@ -26,6 +26,10 @@ li.CodeMirror-hint {
   }
 }
 
+ul.CodeMirror-hints {
+  z-index: 500;
+}
+
 .cm-s-mongodb .CodeMirror-matchingbracket {
     outline: 0;
     border-bottom: 1px solid grey;
